change nav bar width to fix overflowed x

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -4,7 +4,6 @@
     position: sticky;
     top: 0;
     font-family: InkLipquid;
-    width: 100%;
     height: 1.5rem;
     display: flex;
     justify-content: center;
